# resonate-sdk-rust-next

./: AGENTS.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deep_review.md  future-todos.md  todo.md
.github/workflows/: ci.yml  publish.yml
resonate/: Cargo.toml
resonate-macros/: Cargo.toml
resonate-macros/src/: lib.rs
resonate/src/: codec.rs  context.rs  core.rs  durable.rs  effects.rs  futures.rs  handle.rs  heartbeat.rs  http_network.rs  info.rs  lib.rs  network.rs  options.rs  promises.rs  registry.rs  resonate.rs  send.rs  test_utils.rs  transport.rs  types.rs
resonate/tests/: e2e.rs
scratch/src/: main.rs
scripts/: bump-version.sh
