[workspace]
members = ["resonate", "resonate-macros"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Resonate SDK for Rust"
repository = "https://github.com/resonatehq/resonate-sdk-rust"
keywords = ["durable", "async", "workflow", "sdk", "durable-execution"]
categories = ["asynchronous", "development-tools"]
