[package]
name = "resonate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
resonate-macros = { path = "../resonate-macros" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
thiserror = "2"
base64 = "0.22"
dashmap = "6"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12.5"
